# docktarr

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: migrate_orchestrator_config.py
src/docktarr/: __main__.py  arr_services.py  arrclient.py  config.py  discovery.py  disk_health.py  docker_manager.py  http_health.py  hw_capability.py  imposter_detector.py  main.py  media_container_audit.py  notifier.py  permissions_health.py  prowlarr.py  pruner.py  qbit_health.py  ssh_client.py  stall_detector.py  state.py  tester.py  vpn_health.py
src/doctarr/: arr_services.py  arrclient.py  config.py  discovery.py  disk_health.py  docker_manager.py  http_health.py  imposter_detector.py  main.py  notifier.py  permissions_health.py  plex_api.py  prowlarr.py  pruner.py  qbittorrent.py  state.py  tester.py  vpn_health.py  yaml_config.py
tests/: test_arr_services.py  test_arrclient.py  test_config.py  test_discovery.py  test_disk_health.py  test_docker_manager.py  test_http_health.py  test_hw_capability.py  test_imposter_detector.py  test_integration_startup.py  test_media_container_audit.py  test_migrate_orchestrator_config.py  test_notifier.py  test_permissions_health.py  test_plex_api.py  test_prowlarr.py  test_pruner.py  test_qbit_health.py  test_qbittorrent.py  test_ssh_client.py  test_stall_detector.py  test_state.py  test_tester.py  test_vpn_health.py  test_yaml_config.py
tests/fixtures/: lspci_intel.txt  lspci_nvidia.txt  plex_preferences_no_hw.xml  plex_preferences_valid.xml
(+1 files in other folders)
